# mregex

./: .clang-tidy  .travis.yml  CMakeLists.txt  LICENSE  README.md  ctr.h  cxregex.h  demo.cpp  main.cpp  metaregex.hpp
.github/workflows/: build.yml
ctr/: ast.h  grammar.h  matching.h  parser.h  result.h  stack.h  static_string.h  symbol.h  utility.h
cx/: ast.h  ast_builder.h  ast_decl.h  ast_fwd.h  astfwd.h  atomic.h  atomic_counter.h  atomic_match_context.h  backref_builder.h  capture.h  capture_builder.h  capture_counter.h  capture_indexer.h  char_class.h  esc_sequence.h  escaped_char.h  generator.h  grammar.h  iterator.h  match_context.h  match_context_atomic.h  match_context_base.h  match_params.h  match_result.h  parser.h  quantifier_builder.h  regex.h  regex_base.h  regex_flags.h  regex_result.h  regex_union.h  stack.h  static_string.h  symbol.h  type_helpers.h  utility.h  va_helpers.h
cx/ast/: ast.h  ast_builder.h  ast_decl.h  atomic.h  backref_builder.h  capture.h  capture_indexer.h  char_class.h  match_params.h
cx/utility/: char_helpers.h  concepts.h  meta_helpers.h  stack.h  static_string.h  tuple_helpers.h
example/: CMakeLists.txt  basic.cpp  extracting_captures.cpp  forward_list.cpp  optional.cpp  regex_generator.cpp  regex_iteration.cpp  regex_range.cpp  regex_searcher.cpp  structured_bindings.cpp  url_parsing.cpp  using_expressions.cpp
include/: mregex.hpp
include/mregex/: input_range_adapter.hpp  match_mode.hpp  match_result.hpp  match_result_generator.hpp  parser.hpp  parser_result.hpp  regex.hpp  regex_base.hpp  regex_capture.hpp  regex_capture_storage.hpp  regex_context.hpp  regex_flags.hpp  regex_interface.hpp  regex_match_context.hpp  regex_match_generator.hpp  regex_methods.hpp  regex_result.hpp  regex_result_generator.hpp  regex_traits.hpp  regex_union.hpp  symbol.hpp  symbols.hpp
include/mregex/ast/: alternation.hpp  ast.hpp  ast_builder.hpp  ast_inversion.hpp  ast_traits.hpp  astfwd.hpp  build.hpp  builder.hpp  building.hpp  capture.hpp  capture_indexer.hpp  capture_name_specifier.hpp  capturing.hpp  disjunction.hpp  index.hpp  indexing.hpp  inversion.hpp  lookaheads.hpp  lookbehinds.hpp  match_mode.hpp  match_result.hpp  repetition.hpp  sequence.hpp  star.hpp  terminals.hpp  traits.hpp  transform.hpp  traversal.hpp
include/mregex/ast/nodes/: alternation.hpp  assertion.hpp  capture.hpp  disjunction.hpp  lookaheads.hpp  lookaround.hpp  lookbehinds.hpp  negated.hpp  optional.hpp  plus.hpp  repetition.hpp  sequence.hpp  set.hpp  star.hpp  terminals.hpp  trivially_matchable.hpp
include/mregex/expr/: components.hpp  flags.hpp  operators.hpp  templates.hpp  utility.hpp
include/mregex/grammar/: actions.hpp  backref_rules.hpp  backrefs.hpp  capture_name_rules.hpp  char_class_rules.hpp  char_classes.hpp  esc_rules.hpp  escapes.hpp  grammar.hpp  grammar_actions.hpp  hexadecimal.hpp  name_rules.hpp  names.hpp  quantifier_rules.hpp  quantifiers.hpp
include/mregex/parser/: lexer.hpp  parser.hpp  parser_result.hpp  state.hpp
include/mregex/parsing/: lexer.hpp  parser.hpp  parser_result.hpp  parser_status.hpp
include/mregex/symbols/: actions.hpp  core.hpp  names.hpp  quantifiers.hpp
include/mregex/utility/: char_traits.hpp  concepts.hpp  continuations.hpp  distance.hpp  enums.hpp  input_range_adapter.hpp  meta_helpers.hpp  reversed_range_view.hpp  stack.hpp  static_string.hpp  tuple.hpp  tuple_helpers.hpp  type_sequence.hpp  type_traits.hpp  universal_capture.hpp
include/mregex/xpr/: adapters.hpp  components.hpp  flags.hpp  operators.hpp  providers.hpp  templates.hpp  transform.hpp  utility.hpp
meta/: atomic_match_context.hpp  capture.hpp  continuation.hpp  generator.hpp  input_range_adapter.hpp  iterable_generator_adapter.hpp  match_context.hpp  match_context_base.hpp  parser.hpp  range_adapter.hpp  regex.hpp  regex_base.hpp  regex_capture.hpp  regex_context.hpp  regex_flags.hpp  regex_match_generator.hpp  regex_result.hpp  regex_token_generator.hpp  regex_union.hpp  symbol.hpp
meta/ast/: alternation.hpp  ast.hpp  ast_builder.hpp  ast_traits.hpp  astfwd.hpp  atomic_counter.hpp  capture_counter.hpp  capture_indexer.hpp  capturing.hpp  disjunction.hpp  exact_matcher.hpp  lookaheads.hpp  lookarounds.hpp  match_bounds.hpp  match_params.hpp  match_result.hpp  repetition.hpp  sequence.hpp  star.hpp  star_strategy.hpp  terminals.hpp
meta/context/: atomic_match_context.hpp  caching_match_context.hpp  match_cache.hpp  match_context.hpp  match_context_base.hpp
meta/grammar/: backref_rules.hpp  char_class_rules.hpp  esc_rules.hpp  grammar.hpp  grammar_actions.hpp  quantifier_rules.hpp
meta/result/: owning_regex_result.hpp  regex_capture.hpp  regex_result.hpp  regex_result_base.hpp
meta/utility/: char_traits.hpp  concepts.hpp  continuations.hpp  meta_helpers.hpp  stack.hpp  static_string.hpp  tuple_helpers.hpp  tuple_map.hpp  type_traits.hpp  universal_capture.hpp
test/: .clang-tidy  CMakeLists.txt  ast_indexing_tests.cpp  ast_inversion_tests.cpp  ast_traits_tests.cpp  capture_name_specifier_tests.cpp  expr_ast_tests.cpp  flag_tests.cpp  iterator_api_tests.cpp  main.cpp  match_result_tests.cpp  parser_accept_tests.cpp  parser_ast_tests.cpp  parser_error_tests.cpp  regex_generator_tests.cpp  regex_iteration_tests.cpp  regex_match_tests.cpp  regex_search_tests.cpp  regex_traits_tests.cpp  regex_union_tests.cpp  stack_tests.cpp  static_string_tests.cpp  symbols_tests.cpp  tests.cpp  tests.hpp  traits_tests.cpp  type_sequence_tests.cpp  type_traits_tests.cpp  xpr_ast_tests.cpp
tests/: flag_tests.cpp  meta_tests.cpp  parser_accept_tests.cpp  parser_ast_tests.cpp  parser_tests.cpp  regex_generator_tests.cpp  regex_match_tests.cpp  regex_search_tests.cpp  regex_union_tests.cpp  stack_tests.cpp  tests.h  tests.hpp  traits_tests.cpp  utility_tests.cpp
(+23 files in other folders)
