function(_mregex_add_example filename)
    set(target_name example_${filename})
    add_executable(${target_name} ${filename}.cpp)
    target_link_libraries(${target_name} PUBLIC mregex)
    set_property(TARGET ${target_name} PROPERTY CXX_STANDARD 20)
endfunction()

_mregex_add_example(basic)
_mregex_add_example(extracting_captures)
_mregex_add_example(url_parsing)
_mregex_add_example(regex_iteration)
_mregex_add_example(structured_bindings)